--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,11 @@
+
+
+/*容器类*/
+ .container {
+    width: 90%;
+    margin: 0px auto !important;
+}
+/*菜单的样式定义*/
 .menu {
     width: 80%;
     height: 48px;
@@ -10,24 +18,20 @@
     line-height: 48px;
     text-align: center;
     margin-right: 5px;
-    background-color: #fafafa;
+    background-color: #ffffff;
 }
 .item.active {
     background-color: #fbfbfb;
 }
-
 
 /*定义卡片的样式*/
 
 .card {
     width: 300px;
     height: 200px;
-    margin: 0px auto;
-    background-color: #fafafa;
+    background-color: #ffffff;
 }
-.card + .card {
-    margin-top: 10px;
-}
+
 .card.header {
     width: 100%;
     height: 48px;
