--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
 }
 /*菜单的样式定义*/
 .menu {
-    width: 80%;
+    width: 90%;
     height: 48px;
     margin: 10px auto;
     display: flex;
@@ -21,7 +21,7 @@
     background-color: #ffffff;
 }
 .item.active {
-    background-color: #fbfbfb;
+    background-color: rgb(164, 194, 245);
 }
 
 /*定义卡片的样式*/
@@ -46,4 +46,40 @@
     width: 100%;
     height: auto;
     text-align: center;
+}
+
+
+/*添加头部的样式*/
+.black {
+    background-color: black;
+}
+.logo-header {
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+    height: auto;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+}
+
+.logo.text {
+    text-transform: uppercase;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: italic;
+    font-size: 25px;
+}
+
+.img.avator {
+    width: 45px;
+    height: 45px;
+    padding: 5px;
+}
+.img.avator > img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
 }
