--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,11 @@
     background-color: #ffffff;
 }
 
+.shaow {
+    box-shadow: 1px 2px 3px rgba(0,0,0, 0.3);
+    border-radius: 5px;
+    margin-top: 10px;
+}
 .card.header {
     width: 100%;
     height: 48px;
